--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">    
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg " id="navbar">
             <div class="container">
-                <div class="navbar-brand ms-4" id="logo">
+                <div class="navbar-brand" id="logo">
                     <a href="#" class="logo">Zidan Fadillah</a>
                 </div>
 
 
                 <div class="social-media">
-                    <a class="fab fa-facebook" href="https://www.instagram.com/zdnfdllh_/"></a>
-                    <a class="fab fa-whatsapp" href="https://www.instagram.com/zdnfdllh_/"></a>
-                    <a class="fab fa-x-twitter" href="https://www.instagram.com/zdnfdllh_/"></a>
+                    <a class="fab fa-whatsapp" href="https://wa.me/08984930904"></a>
+                    <a class="fab fa-instagram" href="https://www.instagram.com/zdnfdllh_/"></a>
+                    <a class="fab fa-x-twitter" href="https://x.com/zdnfdllh_"></a>
                 </div>
 
 
@@ -38,14 +38,14 @@
 
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto p-2 rounded-3 text-center">
-                        <li class="nav-item">
+                        <li class="nav-item ">
                             <a class="nav-link" href="#hero">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#About">About</a>
+                            <a class="nav-link" href="#portfolio">Project</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#portfolio">Portfolio</a>
+                            <a class="nav-link" href="#about">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#Certificate">Certificate</a>
@@ -61,16 +61,16 @@
     </header>
     
     <main>
-        <section class="align-items-center" id="hero">
+        <section class="align-items-center " id="hero">
             <div class="d-flex container-fluid ">
                 <div class="row align-items-center ">
-                    <div class="col-md-6 text-center " id="hero-text">
-                        <h1 class="display-4 fw-bold text-white mx-5">Hi, <span style="color: #79D1C3;">I'm Zidan
+                    <div class="col-md-6 " id="hero-text">
+                        <h1 class="display-5 fw-bold text-white mx-5">Hi, <span style="color: #79D1C3;">I'm Zidan
                             Fadillah</span>
                             <span id="job-title"> -Website Developer</span>
                         </h1>
-                        <p class="text text-white ">Creative Web Developer specializing in Back-end development,
-                            design, <br>Wordpress
+                        <p class="text-white mx-5">Creative Web Developer specializing in Back-end development,
+                            design, Wordpress
                             customization, and UI/UX Design.
                         </div>
                         <div class="col-md-6 text-center">
@@ -78,9 +78,10 @@
                     </div>
                 </div>
             </div>
+        </section>
         <!-- Portfolio Section Start -->
         <section id="portfolio" class="py-5">
-            <div class="container">
+            <div class="container ">
                 <!-- Title di atas card item -->
                 <h2 class="text-center fw-bold mb-5 section-title">My Project</h2>
                 <div class="row g-4">
@@ -122,24 +123,25 @@
                     </div>
                 </div>
                 <!-- About Section Start -->
-                <section id="About" class="py-5">
+                <section id="about" class="py-5">
                     <div class="container">
                         <div class="row align-items-center flex-md-row flex-column-reverse">
                             <div class="col-md-6 mt-4 mt-md-0">
                                 <div class="about-card p-4 rounded-4 shadow-lg">
-                                    <h2 class="fw-bold mb-3 about-title">Tentang Saya</h2>
+                                    <h2 class="fw-bold mb-3 about-title">About Me</h2>
                                     <p class="about-desc">
                                         Halo! Saya <span class="fw-semibold" style="color:#79D1C3">Zidan Fadillah</span>, seorang web developer yang berfokus pada pembuatan website di sisi server. Saya suka belajar teknologi baru dan membagikan pengetahuan melalui project-project kreatif.
                                     </p>
                                     <ul class="about-list list-unstyled mt-3">
-                                        <li><i class="fa-solid fa-code me-2" style="color:#79D1C3"></i>Back-end & WordPress Development</li>
-                                        <li><i class="fa-solid fa-code me-2" style="color:#79D1C3"></i>WordPress Development</li>
+                                        <li><i class="fa-solid fa-code me-2" style="color:#79D1C3"></i>Back-end </li>
                                         <li><i class="fa-solid fa-palette me-2" style="color:#79D1C3"></i>UI/UX Design</li>
+                                        <li><i class="fa-solid fa-code me-2" style="color:#79D1C3"></i>WordPress Development</li>
                                     </ul>
                                     <button id="about-more-btn" class="btn btn-outline-info rounded-pill mt-4 px-4">Tampilkan Lebih Banyak</button>
                                     <div id="about-more" class="about-more mt-3" style="display:none;">
                                         <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                                            📩 Zidanfadillah006@gmail.com <br>
+                                            ☎️ +62-898-4930-904
                                         </p>
                                         <a href="mailto:zdnfdllh@gmail.com" class="btn btn-info rounded-pill px-4 mt-2">Hubungi Saya</a>
                                     </div>
@@ -158,25 +160,25 @@
                     <div class="row justify-content-center g-4">
                         <div class="col-md-4">
                             <div class="certificate-card p-4 text-center h-100">
-                                <img src="assets/img/certificate1.png" alt="Certificate 1" class="certificate-img mb-3">
-                                <h5 class="fw-semibold mb-2">Dicoding Front-End Developer</h5>
-                                <p class="mb-1">Sertifikat kelulusan program Front-End Web Developer dari Dicoding Indonesia.</p>
+                                <img src="assets/img/mc.jpg" alt="Certificate 1" class="certificate-img mb-3">
+                                <h5 class="fw-semibold mb-2 text-white">Mikrotik Network Associate</h5>
+                                <p class="mb-1">Sertifikat resmi Mikrotik yang membuktikan kemampuan dalam instalasi, konfigurasi, dan troubleshooting jaringan berbasis Mikrotik RouterOS.</p>
                                 <a href="#" class="btn btn-outline-info btn-sm rounded-pill mt-2">Lihat Sertifikat</a>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="certificate-card p-4 text-center h-100">
-                                <img src="assets/img/certificate2.png" alt="Certificate 2" class="certificate-img mb-3">
-                                <h5 class="fw-semibold mb-2">Google Data Analytics</h5>
-                                <p class="mb-1">Sertifikat penyelesaian kursus Data Analytics dari Google Career Certificates.</p>
+                                <img src="assets/img/it.jpg" alt="Certificate 2" class="certificate-img mb-3">
+                                <h5 class="fw-semibold mb-2 text-white">Software Development</h5>
+                                <p class="mb-1">Sertifikat penguasaan pengembangan perangkat lunak mulai dari analisis kebutuhan, desain, implementasi, hingga pengujian aplikasi modern.</p>
                                 <a href="#" class="btn btn-outline-info btn-sm rounded-pill mt-2">Lihat Sertifikat</a>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="certificate-card p-4 text-center h-100">
-                                <img src="assets/img/certificate3.png" alt="Certificate 3" class="certificate-img mb-3">
-                                <h5 class="fw-semibold mb-2">WordPress Expert</h5>
-                                <p class="mb-1">Sertifikat keahlian WordPress Development dari lembaga pelatihan online.</p>
+                                <img src="assets/img/wp.jpg" alt="Certificate 3" class="certificate-img mb-3">
+                                <h5 class="fw-semibold mb-2 text-white">WordPress Expert</h5>
+                                <p class="mb-1">Sertifikat keahlian WordPress untuk pembuatan, kustomisasi tema, pengelolaan plugin, dan optimasi website profesional berbasis WordPress.</p>
                                 <a href="#" class="btn btn-outline-info btn-sm rounded-pill mt-2">Lihat Sertifikat</a>
                             </div>
                         </div>
@@ -190,13 +192,13 @@
         <div class="container">
             <div class="row align-items-center text-center text-md-start">
                 <div class="col-md-6 mb-3 mb-md-0">
-                    <span class="footer-logo fw-bold" style="color:#79D1C3;">Zidan Fadillah</span>
+                    <span class="footer-logo fw-bold text-light">Zidan Fadillah</span>
                     <span class="ms-2 text-light">&copy; 2025 All Rights Reserved.</span>
                 </div>
-                <div class="col-md-6 text-md-end">
+                <div class="col-md-6 text-md-end icon-footer">
                     <a href="https://www.instagram.com/zdnfdllh_/" class="footer-icon me-3" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a href="https://wa.me/6281234567890" class="footer-icon me-3" target="_blank"><i class="fab fa-whatsapp"></i></a>
-                    <a href="mailto:zdnfdllh@gmail.com" class="footer-icon me-3" target="_blank"><i class="fas fa-envelope"></i></a>
+                    <a href="https://wa.me/08984930904" class="footer-icon me-3" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                    <a href="https://mailto:Zidanfadillah006@gmail.com" class="footer-icon me-3" target="_blank"><i class="fas fa-envelope"></i></a>
                     <a href="https://x.com/zdnfdllh_" class="footer-icon" target="_blank"><i class="fab fa-x-twitter"></i></a>
                 </div>
             </div>
